nat transversal added

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -7,5 +7,6 @@ ipsec_crypto_authentication: "hmac_sha1"
 ipsec_dh_group: "modp1024"
 ipsec_pfs_group: "2"
 ipsec_lifetime: "time 12 hour"
+ipsec_nat_traversal: "off"
 
 ipsec_hosts: []
